[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "grnndata"
version = "1.1.0"
description = "Awesome gene regulatory network enhanced anndata"
authors = [ "jkobject",]
readme = [ "README.md", "LICENSE",]
license = "GPL3"
repository = "https://github.com/cantinilab/GRnnData"
keywords = [ "scRNAseq", "gene regulatory networks", "anndata", "scPRINT",]

[tool.poetry.dependencies]
python = "^3.10"
anndata = "*"
scipy = "*"
networkx = "*"
gseapy = "1.*"
numpy = "*"
leidenalg = "*"
louvain = "*"
powerlaw = "*"
pyvis = "*"
d3graph = "*"
scanpy = "*"

[tool.poetry.extras]
dev = [ "pytest", "toml", "coverage", "flake8", "black", "isort", "pytest-cov", "mypy", "gitchangelog", "mkdocs", "mkdocs-git-revision-date-localized-plugin", "mkdocstrings", "mkdocs-git-authors-plugin", "mkdocs-jupyter", "mkdocstrings-python"]

[tool.poetry.scripts]
grnndata = "grnndata.__main__:main"



[tool.poetry.dependencies.pytest]
version = "1.1.0"
optional = true

[tool.poetry.dependencies.coverage]
version = "1.1.0"
optional = true

[tool.poetry.dependencies.flake8]
version = "1.1.0"
optional = true

[tool.poetry.dependencies.black]
version = "1.1.0"
optional = true

[tool.poetry.dependencies.isort]
version = "1.1.0"
optional = true

[tool.poetry.dependencies.pytest-cov]
version = "1.1.0"
optional = true

[tool.poetry.dependencies.mypy]
version = "1.1.0"
optional = true

[tool.poetry.dependencies.gitchangelog]
version = "1.1.0"
optional = true

[tool.poetry.dependencies.mkdocs]
version = "1.1.0"
optional = true

[tool.poetry.dependencies.toml]
version = "1.1.0"
optional = true
